<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">InterDate</string>
    <string name="main_layout" translatable="false">Main TabLayout</string>
    <string name="add">Add friends</string>
    <string name="prompt_password">Password</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget password?</string>
    <string name="reset">Reset.</string>
    <string name="enter_email">Enter email.</string>
    <string name="enter_password">Enter password.</string>
    <string name="please_wait">Please wait</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="Ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="suretodelete">Removing your account will remove all your saved data, this action cannot be undone, are you sure you want to continue?</string>
    <string name="submit">Submit</string>
    <string name="delete_account">Deleting account?</string>
    <string name="pass_reset_note">You will receive a password reset email. Please follow the instructions to continue.</string>
    <string name="reset_email_link_sent">"An Email was sent to "</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="names">Names</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="about">About yourself</string>
    <string name="languages">Languages</string>
    <string name="how_many">How many children do you have?</string>
    <string name="occupations">Occupations</string>
    <string name="qualifications">Qualifications</string>
    <string name="country">Country</string>
    <string name="state">Province</string>
    <string name="city">City</string>
    <string name="town">Town</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="register">Sign Up</string>
    <string name="hobbies">Hobbies</string>
    <string name="race">Race</string>
    <string name="re_locate">Re-location</string>
    <string name="willing_re_locate">Willing to relocate</string>
    <string name="partner_preference">Partner preference</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="non_female" translatable="false">Female</string>
    <string name="non_male" translatable="false">Male</string>
    <string name="non_black" translatable="false">Black</string>
    <string name="non_coloured" translatable="false">Coloured</string>
    <string name="non_indian" translatable="false">Indian</string>
    <string name="non_white" translatable="false">White</string>
    <string name="Other">Other</string>
    <string name="black">Black</string>
    <string name="coloured">Coloured</string>
    <string name="indian">Indian</string>
    <string name="white">White</string>
    <string name="sign_up">SignUp</string>
    <string name="passmissmatch">Password to not match!</string>
    <string name="entername">Enter your names!</string>
    <string name="enterage">Enter your age!</string>
    <string name="entergender">Enter your gender!</string>
    <string name="enterrace">Enter your race!</string>
    <string name="enterlanguages">Enter your languages!</string>
    <string name="enterocupations">Enter your Occupations</string>
    <string name="enterhobbies">Enter your Hobbies!</string>
    <string name="underage">User must at least be 18 years and older to use this service.</string>
    <string name="moreaboutyourself">Tell us more about yourself!</string>
    <string name="entercountry">Enter your country!</string>
    <string name="enterprovince">Enter your province</string>
    <string name="entercity">Enter your city!</string>
    <string name="entertown">Enter your town!</string>
    <string name="enterqualifications">Enter your qualifications</string>
    <string name="enterminpreage">Enter your minimum preferred age!</string>
    <string name="entermaxpreage">Enter your maximum preferred age!</string>
    <string name="enterpregender">Enter your preferred gender!</string>
    <string name="enterprerace">Enter your preferred race!</string>
    <string name="willing_re_locate_yes_no">Willing to relocate? (Yes/No)</string>
    <string name="enterpatrelochoi">Enter partner relocation choice!</string>
    <string name="arewillrelo">Are you willing to Re-locate?</string>
    <string name="minpass">At least 8 characters are required</string>
    <string name="selectpro">Selected profile photo!</string>
    <string name="sendingveremail">Sending verification email.</string>
    <string name="verify_email">Verify your Email!</string>
    <string name="specify_gender">Specify your gender.</string>
    <string name="specify_race">Specify your race.</string>
    <string name="updatesucc">Update successful.</string>
    <string name="enter_current_password">Enter your current password.</string>
    <string name="enter_new_password">Enter your new password.</string>
    <string name="signing_out">Signing out?</string>
    <string name="about_to_signout">You can use your email and password to sign back in. Are you sure you want to continue?</string>
    <string name="swith_theme">App Theme</string>
    <string name="choose_app_theme">Choose app theme.</string>
    <string name="save">Save</string>
    <string name="auto_detect_system_theme">Auto detect system theme.</string>
    <string name="do_you_have_children">Do you have any children?</string>
    <string name="education_information">Education information</string>
    <string name="personal_information">Personal information</string>
    <string name="location_information">Location information</string>
    <string name="information_changes_detected">Information changes detected</string>
    <string name="enterabout">Tell us about yourself.</string>
    <string name="kids">Enter number in total.</string>
    <string name="wantpatnerrelocate">partner to re-locate?</string>
    <string name="enteragemax">Enter your maximum age</string>
    <string name="enteragemin">Enter your minimum age</string>
    <string name="any">Any</string>
    <string name="post_image">Post image</string>
    <string name="privacy_public_private">Privacy (public/private)</string>
    <string name="searching_in">Searching in</string>
    <string name="no_users_found_at_your_location">No Users found at your location</string>
    <string name="searching">Searching</string>
    <string name="requesting">Requesting…</string>
    <string name="Sent">Request sent</string>
    <string name="sendingmessage">Sending message…</string>
    <string name="msgSent">Message sent</string>
    <string name="requestFailed">Request failed</string>
    <string name="request_all_sent">Request already sent</string>
    <string name="type_message">Type your message</string>
    <string name="add_user_to_chat">Add user to start chatting.</string>
    <string name="acceptence_failed">This request is no longer available</string>
    <string name="may_have_removed">May have removed this request.</string>
    <string name="failed">Error!</string>
    <string name="added_to_friends">Friend added</string>
    <string name="delete_succesfull">Delete successfully</string>
    <string name="enterreligion">Enter your religion.</string>
    <string name="religion">Religion</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="be_first_to_send_msg">"Be the first to send messages to "</string>
    <string name="already_friends">Already added!</string>
    <string name="posts">Posts</string>
    <string name="s">\'s</string>
    <string name="space">" "</string>
    <string name="noUsers_withmatch">No users on you preferences.</string>
    <string name="tapToChat">Tap to start chat.</string>
    <string name="delete_your_side_msg">Delete conversations?</string>
    <string name="about_to_de_conv">Your about to delete your conversation between you and this user, this action cannot be undone. Are you sure you want to continue?</string>
    <string name="error_occured">Something went wrong!</string>
    <string name="underage_successfull">Unfriend was a success.</string>
    <string name="blocking_user">Your about to block this user,this will block any interaction from or to this user. If this user is violating your rights or is a fake account, is recommended to let the developer know which might also help other users.</string>
    <string name="cancel" tools:ignore="PrivateResource">Cancel</string>
    <string name="continuee">Continue</string>
    <string name="blocking">Blocking User?</string>
    <string name="added_to_blocklist">Added to blocklist</string>
    <string name="unfriending">Your about to remove this user from you friends list, this user can still see you photos and your personal information.</string>
    <string name="currenly_un_ava">Feature currently unavailable.</string>
    <string name="incomingcall">Incoming call</string>
    <string name="outgoingcall">Outgoing call</string>
    <string name="your_call_here">Your call history will appear here.</string>
    <string name="about_to_delete_call_history">Your about to delete all call history, this action cannot be undone. Are you sure you want to continue?</string>
    <string name="confirm">Confirm</string>
    <string name="patner_baciclly">Basics</string>
    <string name="bacically_looking_for">Basically am looking for?</string>
    <string name="enter_your_per_religion">Enter your preferred religion.</string>
    <string name="basically_what_lookingFor">Basically, what are you looking for?</string>
    <string name="settings">Settings</string>
    <string name="more_options">More options</string>
    <string name="we_are_here_to_help">We are here to help.</string>
    <string name="contact_us">Contact us</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="app_info">App info</string>
    <string name="video_chat">Video chat</string>
    <string name="voice_chat">Voice chat</string>
    <string name="more_options_">More options</string>
    <string name="profile">Profile</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="delete_for_everyone">Delete for everyone</string>
    <string name="delete_for_me">Delete for me</string>
    <string name="search_place">Search place</string>
    <string name="sorry">Sorry!</string>
    <string name="location">Location</string>
    <string name="where_are_you_attending">Where are attending?</string>
    <string name="no_users_found_at_of_your_prefference">No users found of your preference.</string>
    <string name="are_you_a_student">Are you a student?</string>
    <string name="update_now">Update Now</string>
    <string name="maybe_later">Maybe later</string>
    <string name="new_update_available">New Update Available</string>
    <string name="continuea">Continue</string>
    <string name="AdBanner_UnitId" translatable="false">ca-app-pub-9859763912650178/6568697871</string>
    <string name="global_search">Global Search</string>
    <string name="search">Search</string>
    <string name="nothing_found_in_this_location">Nothing found in this location</string>
    <string name="university_college">University/College</string>
    <string name="to_continue_using_interdate_please_update_to_the_latest_versionn">To continue using InterDate, please update to the latest version.</string>
    <string name="to_continue_using_interdate_please_update_to_the_latest_versionnn">To continue using InterDate, please update to the latest version.</string>
    <string name="messageee">Message</string>
    <string name="more_optionss">More options</string>
    <string name="profileeee">Profile</string>
    <string name="remove">Remove</string>
</resources>