<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InformationPages.EducationInformation">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/education_information"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginVertical="10dp"
        android:textSize="18sp"
        android:layout_marginStart="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:layout_marginHorizontal="10dp"
        android:text="@string/are_you_a_student"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:id="@+id/studentCheck"
            android:layout_height="wrap_content"/>
        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:text="@string/no"
            android:textColor="@color/white"
            android:id="@+id/NotStudentCheck"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="@string/where_are_you_attending"
        android:layout_marginTop="20dp"
        app:hintAnimationEnabled="true"
        app:boxStrokeColor="@color/darkGreen"
        android:id="@+id/studentHolder"
        app:startIconDrawable="@drawable/studying"
        app:startIconTint="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        android:textColorHint="@color/darkGreen"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:id="@+id/where"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="@string/qualifications"
        app:hintAnimationEnabled="true"
        android:layout_marginTop="30dp"
        app:boxStrokeColor="@color/darkGreen"
        app:startIconDrawable="@drawable/studying"
        app:startIconTint="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        android:textColorHint="@color/darkGreen"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:textColor="@color/white"
            android:id="@+id/qualifications"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>